kubernetes/flower-deployment.yaml
# Deployment of the Flower monitoring app for celery.
# Connect to Flower using kubectl port forwarding:
#   kubectl port-forward <pod> 8080:5555

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flower
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: "flower"
    spec:
      containers:

        - name: "flower"
          imagePullPolicy: "Always"
          # https://hub.docker.com/r/mher/flower/
          image: "mher/flower:0.9"
          command: ["flower", "--port 5555", "--broker=$(REDIS_URL)"]
          ports:
            - containerPort: 5555
              name: "flower"
