kubernetes/keeper-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keeper-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: keeper
    spec:
      containers:

        - name: nginx
          imagePullPolicy: "Always"
          image: "lsstsqre/nginx-python:k8s"
          ports:
            # from keeper-service
            - name: keeper-nginx
              containerPort: 8080

        - name: cloudsql-proxy
          image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
          command: ["/cloud_sql_proxy", "-dir=/cloudsql", "-credential_file=/secret/file.json", "-instances=$(CLOUD_SQL_INSTANCE)"]
          volumeMounts:
          - name: cloudsql
            mountPath: /cloudsql
          - name: cloudsql-secret-volume
            mountPath: /secret/
          - name: cloudsql-ssl-certs
            mountPath: /etc/ssl/certs

        - name: uwsgi
          imagePullPolicy: "Always"
          image: "lsstsqre/ltd-keeper:1.14.0"
          ports:
            - containerPort: 3031
              name: keeper
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-secret-volume
          secret:
            secretName: cloudsql-secrets
        - name: cloudsql-ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
