kubernetes/keeper-mgmt-pod.yaml
# Pod containing the Nginx and uWSGI (Keeper) containers
# see http://kubernetes.io/docs/user-guide/pods/
#
# Use this to create bare pods for maintenance activities, like running a
# migration or initializing a database. For regular api serving pods, use the
# keeper-controller to start up a replication controller that manages pods.

apiVersion: v1
kind: Pod
metadata:
  name: keeper-mgmt
  labels:
    name: keeper-mgmt
    tier: management
spec:
  containers:

    - name: nginx
      image: "lsstsqre/nginx-python:k8s"
      ports:
        - containerPort: 80

    - name: cloudsql-proxy
      image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
      volumeMounts:
      - name: cloudsql
        mountPath: /cloudsql
      - name: cloudsql-secret-volume
        mountPath: /secret/
      - name: cloudsql-ssl-certs
        mountPath: /etc/ssl/certs
      # FIXME set project and instance name
      command: ["/cloud_sql_proxy", "-dir=/cloudsql", "-credential_file=/secret/file.json", "-instances=$MYPROJECT:MYINSTANCE"]

    - name: uwsgi
      image: "lsstsqre/ltd-keeper:20170220-0"
      # Container should do nothing on start; let the user access it
      # http://kubernetes.io/docs/user-guide/containers/#how-docker-handles-command-and-arguments
      command: ["/bin/sleep", "86400"]
      ports:
        - containerPort: 3031
          name: keeper
      # Uncomment the securityContext to run as root instead of uwsgi
      # securityContext:
      #   runAsUser: 0
      volumeMounts:
        - name: cloudsql
          mountPath: /cloudsql
  volumes:
    - name: cloudsql-secret-volume
      secret:
        secretName: cloudsql-secrets
    - name: cloudsql-ssl-certs
      hostPath:
        path: /etc/ssl/certs
    - name: cloudsql
      emptyDir:
