kubernetes/keeper-pod.yaml
# Pod containing the Nginx and uWSGI (Keeper) containers
# see http://kubernetes.io/docs/user-guide/pods/
#
# Run this pod as the Keeper app while we still rely on sqlite and
# a persistent storage disk.
#
# This pod is configured to be served through the keeper-service Load Balancer
# to get a stable IP.

apiVersion: v1
kind: Pod
metadata:
  name: keeper
  labels:
    name: keeper
    tier: management
spec:
  containers:

    - name: nginx
      image: "lsstsqre/nginx-python:k8s"
      ports:
        - containerPort: 80

    - name: uwsgi
      image: "lsstsqre/ltd-keeper:latest"
      ports:
        - containerPort: 3031
          name: keeper
      volumeMounts:
        # sqlite-persistent-storage's definition below
        - name: sqlite-persistent-storage
          mountPath: /var/lib/sqlite
  volumes:
    - name: sqlite-persistent-storage
      gcePersistentDisk:
        # This disk must already exist via 
        # gcloud compute disks create --size 1GB keeper-disk
        pdName: keeper-disk
        fsType: ext4
