kubernetes/keeper-worker-deployment.yaml
# Deployment of celery workers for keeper
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keeper-worker-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: keeper-worker
    spec:
      containers:

        - name: cloudsql-proxy
          image: b.gcr.io/cloudsql-docker/gce-proxy:1.05
          command: ["/cloud_sql_proxy", "-dir=/cloudsql", "-credential_file=/secret/file.json", "-instances=$(CLOUD_SQL_INSTANCE)"]
          volumeMounts:
          - name: cloudsql
            mountPath: /cloudsql
          - name: cloudsql-secret-volume
            mountPath: /secret/
          - name: cloudsql-ssl-certs
            mountPath: /etc/ssl/certs

        - name: keeper-worker
          imagePullPolicy: "Always"
          image: "lsstsqre/ltd-keeper:1.12.0"
          command: ["/bin/bash"]
          args: ["-c", "/ltd-keeper/run-celery-worker.bash"]
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-secret-volume
          secret:
            secretName: cloudsql-secrets
        - name: cloudsql-ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
