kubernetes/redis-deployment.yaml
# Deployment of a redis DB.
#
# This deployment isn't high-availability, nor does it have persistent storage.
# Those features may be added in the future (particularly by replacing this
# deployment with a HA Redis Helm chart.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keeper-redis
spec:
  replicas: 1  # Don't scale this deployment up
  template:
    metadata:
      labels:
        name: "keeper-redis"
    spec:
      containers:

        - name: "redis"
          imagePullPolicy: "Always"
          image: "redis:4-alpine"
          ports:
            - containerPort: 6379
              name: "keeper-redis"
