kubernetes/keeper-service.yaml
# Service for the 'keeper' deployment
#
# https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
#
# This Services takes traffic from the ingress and routes it to the
# keeper-nginx port of the keeper pods.

apiVersion: v1
kind: Service
metadata:
  name: keeper
  labels:
    name: keeper
spec:
  type: NodePort
  ports:
    - name: keeper-http
      protocol: TCP
      port: 8080
      targetPort: keeper-nginx
  selector:
    name: keeper
