kubernetes/ssl-proxy-service.yaml
# LoadBalancer service for nginx-ssl-proxy
#
# From https://github.com/GoogleCloudPlatform/kube-jenkins-imager/blob/master/service_ssl_proxy.yaml
# Apache license; see /third_party_licenses/kube_jenkins_imager_license.txt

kind: Service
apiVersion: v1
metadata:
  name: nginx-ssl-proxy
  labels:
    name: nginx-ssl-proxy
    role: ssl-proxy
spec:
  selector:
    name: nginx-ssl-proxy
    role: ssl-proxy
  type: LoadBalancer
  ports:
  - name: https
    port: 443
    targetPort: ssl-proxy-https
    protocol: TCP
  - name: http
    port: 80
    targetPort: ssl-proxy-http
    protocol: TCP
