kubernetes/ingress.yaml
# Ingress services for 'keeper' Service

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keeper
  labels:
    name: keeper
spec:
  tls:
    - secretName: keeper-tls
  backend:
    serviceName: keeper
    servicePort: keeper-http
